--- a/public/travel.html
+++ b/public/travel.html
@@ -19,7 +19,7 @@
 							<a href="index.html">Home</a>
 						</li>
 						<li class="selected">
-							<a href="/travel">Travel</a>
+							<a href="travel.html">Travel</a>
 						</li>
 						<li>
 							<a href="rooms.html">Rooms</a>
@@ -88,7 +88,7 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li class="active">
-						<a href="/travel">Travel</a>
+						<a href="travel.html">Travel</a>
 					</li>
 					<li>
 						<a href="rooms.html">Rooms</a>
